--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,8 @@ project(Rubixcubesolver)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Rubixcubesolver main.cpp)
+add_executable(Rubixcubesolver main.cpp
+        RubiksCube.cpp
+        RubiksCube.h
+        RubiksCube3Darray.cpp
+)
